--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+.no-scrollbar {
+  -ms-overflow-style: none;  /* for Internet Explorer and Edge */
+  scrollbar-width: none;     /* for Firefox */
+}
